--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -246,6 +246,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="179dp"
         android:layout_marginRight="179dp"
+        android:alpha="0"
         android:onClick="playAgain"
         android:text="Play Again"
         app:layout_constraintEnd_toEndOf="parent"
