--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,26 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
-<!--    <fragment-->
-<!--        android:id="@+id/fragmentPlace"-->
-<!--        android:name="com.example.helloworld.SinglePlayerSettingsFragment"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        tools:layout_editor_absoluteX="160dp"-->
-<!--        tools:layout_editor_absoluteY="317dp" />-->
-    <TextView
-        android:id="@+id/whichSettings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="135dp"
-        android:layout_marginLeft="135dp"
-        android:layout_marginTop="319dp"
-        android:layout_marginEnd="135dp"
-        android:layout_marginRight="135dp"
-        android:text="TextView"
-        android:textColor="#000000"
-        android:textSize="30sp"
+    <fragment
+        android:id="@+id/fragmentPlace"
+        android:name="com.example.helloworld.BlankFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+
+<!--    <TextView-->
+<!--        android:id="@+id/whichSettings"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="135dp"-->
+<!--        android:layout_marginLeft="135dp"-->
+<!--        android:layout_marginTop="319dp"-->
+<!--        android:layout_marginEnd="135dp"-->
+<!--        android:layout_marginRight="135dp"-->
+<!--        android:text="TextView"-->
+<!--        android:textColor="#000000"-->
+<!--        android:textSize="30sp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
