--- a/app/src/main/res/layout/fragment_multi_player_settings.xml
+++ b/app/src/main/res/layout/fragment_multi_player_settings.xml
@@ -14,11 +14,11 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="163dp"
-            android:layout_marginLeft="163dp"
-            android:layout_marginTop="128dp"
-            android:layout_marginEnd="173dp"
-            android:layout_marginRight="173dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="70dp"
+            android:layout_marginRight="70dp"
             android:fontFamily="sans-serif-condensed"
             android:text="@string/multiPlayerSettings"
             android:textColor="#673AB7"
@@ -34,12 +34,127 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="146dp"
             android:layout_marginLeft="146dp"
-            android:layout_marginTop="457dp"
+            android:layout_marginTop="396dp"
             android:layout_marginEnd="153dp"
             android:layout_marginRight="153dp"
-            android:text="Start"
+            android:text="@string/start"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="166dp"
+            android:layout_marginLeft="166dp"
+            android:layout_marginTop="72dp"
+            android:layout_marginEnd="169dp"
+            android:layout_marginRight="169dp"
+            android:text="@string/circlePlayer"
+            android:textColor="#000000"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <EditText
+            android:id="@+id/circlePlayerName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="97dp"
+            android:layout_marginLeft="97dp"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="85dp"
+            android:layout_marginRight="85dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@string/playerOne"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="166dp"
+            android:layout_marginLeft="166dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginEnd="169dp"
+            android:layout_marginRight="169dp"
+            android:text="@string/crossPlayer"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/circlePlayerName" />
+
+        <EditText
+            android:id="@+id/crossPlayerName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="97dp"
+            android:layout_marginLeft="97dp"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="85dp"
+            android:layout_marginRight="85dp"
+            android:ems="10"
+            android:hint="Enter player name"
+            android:inputType="textPersonName"
+            android:text="@string/playerTwo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+        <RadioGroup
+            android:id="@+id/radioGroup2"
+            android:layout_width="73dp"
+            android:layout_height="96dp"
+            android:layout_marginStart="160dp"
+            android:layout_marginLeft="160dp"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="160dp"
+            android:layout_marginRight="160dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView9">
+
+            <RadioButton
+                android:id="@+id/crossRadioButton2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="@string/cross"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/circleRadioButton2" />
+
+            <RadioButton
+                android:id="@+id/circleRadioButton2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/circle"
+                app:layout_constraintEnd_toStartOf="@+id/crossRadioButton2"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="168dp"
+            android:layout_marginLeft="168dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginEnd="168dp"
+            android:layout_marginRight="168dp"
+            android:text="@string/whoseTurnFirst"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/crossPlayerName" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
